# solana-ai-boilerplate

./: .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
app/: package.json  tsconfig.json
docs/: ARCHITECTURE.md  SPECIFICATION.md
keeper/: README.md  deno.json
keeper/src/: config.ts  main.ts  service.ts
programs/protocol/: Cargo.toml
programs/protocol/src/: constants.rs  error.rs  lib.rs
programs/protocol/src/instructions/: mod.rs
programs/protocol/src/math/: mod.rs  wad.rs
programs/protocol/src/state/: mod.rs
scripts/: build.sh
sdk/: package.json
sdk/src/: index.ts  program.ts
sdk/src/accounts/: index.ts
sdk/src/constants/: index.ts
sdk/src/instructions/: index.ts
tests/helpers/: setup.ts
