[package]
name = "protocol"
version = "0.1.0"
description = "Solana program built with Anchor"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "protocol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
# Extended staleness threshold for devnet oracle feeds
devnet = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
